fix on mobile-nav.

--- a/src/assets/scss/components/_wrapper.scss
+++ b/src/assets/scss/components/_wrapper.scss
@@ -6,4 +6,8 @@
 	position: relative;
 	min-height: 100vh;
 	overflow: hidden;
+
+	&.is-fixed {
+		position: fixed;
+	}
 }
